# CS149-Assignments

asst1/: .gitignore
asst1/common/: img.cpp  ppm.cpp
asst1/prog1_mandelbrot_threads/: CMakeLists.txt  main.cpp  mandelbrotThread.cpp
asst1/prog2_vecintrin/: main.cpp
asst1/prog2_vecintrin/include/: logger.h
asst1/prog2_vecintrin/src/: CS149intrin.cpp  logger.cpp
asst1/prog3_mandelbrot_ispc/: CMakeLists.txt  main.cpp
asst1/prog3_mandelbrot_ispc/include/: mandelbrot_ispc.h
asst1/prog3_mandelbrot_ispc/src/: mandelbrot.ispc  mandelbrotSerial.cpp  tasksys.cpp
asst1/prog4_sqrt/: CMakeLists.txt  main.cpp
asst1/prog4_sqrt/include/: sqrt_ispc.h
asst1/prog4_sqrt/src/: sqrt.ispc  sqrtAXV2.cpp
asst1/prog6_kmeans/: CMakeLists.txt  main.cpp  plot.py  pyproject.toml
asst1/prog6_kmeans/src/: kmeansThread.cpp  utils.cpp
